add: meta tags, h1 rotate to h2, description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Салон красоты Бар студио - это первоклассные мастера. Стрижки от 15 BYN. Салон в самом центре Могилева. Онлайн запись!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,10 +25,23 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     
-    <title>BAR Studio website</title>
+    <title>BAR studio Могилев - кератин, ботокс, мужские, женские и детские стрижки.</title>
   </head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-76B801L1GX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-76B801L1GX');
+  </script>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h1 style="display: none;">Салон красоты BAR Studio</h1>
+    <a href="https://pr-cy.ru" target="_blank"><img src="https://s.pr-cy.ru/counters/barstudio.by" style="display: none;" width="88" height="31" alt="Анализ сайта" /></a>
     <div id="root"></div>
     <!--
       This HTML file is a template.
